Исправления ошибок центровщика в header для мобил

--- a/source/form.html
+++ b/source/form.html
@@ -11,43 +11,43 @@
 
 <body class="page__body">
   <header class="page-header page-header--inner-form">
-    <div class="page-header__box container">
-      <div class="page-header__wrapper">
 
-        <!-- Логотип -->
+    <div class="page-header__wrapper container container--mob-100">
 
-        <div class="page-header__logo">
-          <a class="page-header__logo-icon" href="index.html">
-            <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
-          </a>
-        </div>
+      <!-- Логотип -->
 
-        <!-- Навигация -->
-
-        <nav class="main-nav main-nav--closed main-nav--nojs">
-          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__list main-nav__site-list">
-              <li class="main-nav__item main-nav__item-inner">
-                <a href="index.html">
-                  Главная
-                </a>
-              </li>
-              <li class="main-nav__item main-nav__item-inner">
-                <a href="catalog.html">
-                  Каталог продукции
-                </a>
-              </li>
-              <li class="main-nav__item main-nav__item-inner main-nav__item--current">
-                <a>
-                  Подбор программы
-                </a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+      <div class="page-header__logo">
+        <a class="page-header__logo-icon" href="index.html">
+          <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
+        </a>
       </div>
+
+      <!-- Навигация -->
+
+      <nav class="main-nav main-nav--closed main-nav--nojs">
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list main-nav__site-list">
+            <li class="main-nav__item main-nav__item-inner">
+              <a href="index.html">
+                Главная
+              </a>
+            </li>
+            <li class="main-nav__item main-nav__item-inner">
+              <a href="catalog.html">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="main-nav__item main-nav__item-inner main-nav__item--current">
+              <a>
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </div>
+
   </header>
 
   <main class="page-main">
