--- a/source/index.html
+++ b/source/index.html
@@ -11,71 +11,71 @@
 
 <body class="page__body">
   <header class="page-header">
-    <!-- <div class="page-header__box"> -->
-      <div class="page-header__wrapper container">
 
-        <!-- Логотип -->
+    <div class="page-header__wrapper container container--mob-100">
 
-        <div class="page-header__logo">
-          <a class="page-header__logo-icon">
-            <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
-          </a>
-        </div>
+      <!-- Логотип -->
 
-
-        <!-- Навигация -->
-
-        <nav class="main-nav main-nav--closed main-nav--nojs">
-          <button class="main-nav__toggle" type="button">
-            <span class="visually-hidden">Открыть меню</span>
-          </button>
-            <div class="main-nav__wrapper container-nav">
-              <ul class="main-nav__list main-nav__site-list">
-                <li class="main-nav__item main-nav__item--current">
-                  <a>
-                    Главная
-                  </a>
-                </li>
-                <li class="main-nav__item">
-                  <a href="catalog.html">
-                    Каталог продукции
-                  </a>
-                </li>
-                <li class="main-nav__item">
-                  <a href="form.html">
-                    Подбор программы
-                  </a>
-                </li>
-              </ul>
-            </div>
-        </nav>
+      <div class="page-header__logo">
+        <a class="page-header__logo-icon">
+          <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
+        </a>
       </div>
 
 
-      <h1 class="visually-hidden">Кэт энэрджи - интернет-магазин функционального питания для котов</h1>
+      <!-- Навигация -->
 
-      <section class="promo">
-        <div class="promo__wrapper container">
-          <div class="promo__wrapper-desktop">
-            <h2 class="promo__title heading-primary heading-primary--m-white">
-              Функциональное питание&nbsp;для котов
-            </h2>
-            <p class="promo__slogan promo__slogan--m-white">
-              Занялся собой? Займись котом!
-            </p>
-          </div>
+      <nav class="main-nav main-nav--closed main-nav--nojs">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list main-nav__site-list">
+            <li class="main-nav__item main-nav__item--current">
+              <a>
+                Главная
+              </a>
+            </li>
+            <li class="main-nav__item">
+              <a href="catalog.html">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="main-nav__item">
+              <a href="form.html">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
 
-          <img class="promo__image" src="img/promo-mobile.png" width="280" height="270"
-            alt="Изображение товара со вкусом курицы в упаковке из стаканчика желто-оранжевой расцветки">
 
-          <p class="promo__button-wrapper">
-            <a class="promo__button button" href="form.html">
-              Подобрать программу
-            </a>
+    <h1 class="visually-hidden">Кэт энэрджи - интернет-магазин функционального питания для котов</h1>
+
+    <section class="promo">
+      <div class="promo__wrapper container">
+        <div class="promo__wrapper-desktop">
+          <h2 class="promo__title heading-primary heading-primary--m-white">
+            Функциональное питание&nbsp;для котов
+          </h2>
+          <p class="promo__slogan promo__slogan--m-white">
+            Занялся собой? Займись котом!
           </p>
         </div>
-      </section>
-    <!-- </div> -->
+
+        <img class="promo__image" src="img/promo-mobile.png" width="280" height="270"
+          alt="Изображение товара со вкусом курицы в упаковке из стаканчика желто-оранжевой расцветки">
+
+        <p class="promo__button-wrapper">
+          <a class="promo__button button" href="form.html">
+            Подобрать программу
+          </a>
+        </p>
+      </div>
+    </section>
+
   </header>
 
   <!-- Основное содержание -->
