--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,7 +51,7 @@
 
   <main class="page-main">
 
-    <h1 class="heading-primary container">Каталог продукции</h1>
+    <h1 class="heading-primary heading-primary--catalog container">Каталог продукции</h1>
 
     <section class="catalog container">
       <ul class="catalog__list">
@@ -62,8 +62,11 @@
             </a>
           </h3>
           <a class="product__image" href="#">
-            <img src="img/product/chicken-mimi-m.png" width="68" height="86"
-              alt="Изображение товара со вкусом курицы в маленькой упаковке из стаканчика желто-оранжевой расцветки">
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/product/chicken-mimi-t.png">
+              <img src="img/product/chicken-mimi-m.png" width="68" height="86"
+                alt="Изображение товара со вкусом курицы в маленькой упаковке из стаканчика желто-оранжевой расцветки">
+            </picture>
           </a>
           <table class="product__parameters">
             <tr>
@@ -87,9 +90,12 @@
               Cat Energy pro 1000 г
             </a>
           </h3>
-          <a class="product__image" href="#">
-            <img src="img/product/chicken-max-m.png" width="84" height="101"
-              alt="Изображение товара со вкусом курицы в большой упаковке из стаканчика желто-оранжевой расцветки">
+          <a class="product__image product__image--max" href="#">
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/product/chicken-max-t.png">
+              <img src="img/product/chicken-max-m.png" width="84" height="101"
+                alt="Изображение товара со вкусом курицы в большой упаковке из стаканчика желто-оранжевой расцветки">
+            </picture>
           </a>
           <table class="product__parameters">
             <tr>
@@ -114,8 +120,11 @@
             </a>
           </h3>
           <a class="product__image" href="#">
-            <img src="img/product/fish-mini-m.png" width="68" height="78"
-              alt="Изображение товара со вкусом рыбы в маленькой упаковке из стаканчика зелёной расцветки">
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/product/fish-mini-t.png">
+              <img src="img/product/fish-mini-m.png" width="68" height="78"
+                alt="Изображение товара со вкусом рыбы в маленькой упаковке из стаканчика зелёной расцветки">
+            </picture>
           </a>
           <table class="product__parameters">
             <tr>
@@ -139,9 +148,12 @@
               Cat Energy pro 1000 г
             </a>
           </h3>
-          <a class="product__image" href="#">
-            <img src="img/product/fish-max-m.png" width="84" height="101"
-              alt="Изображение товара со вкусом рыбы в большой упаковке из стаканчика зелёной расцветки">
+          <a class="product__image product__image--max" href="#">
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/product/fish-max-t.png">
+              <img src="img/product/fish-max-m.png" width="84" height="101"
+                alt="Изображение товара со вкусом рыбы в большой упаковке из стаканчика зелёной расцветки">
+            </picture>
           </a>
           <table class="product__parameters">
             <tr>
@@ -166,8 +178,11 @@
             </a>
           </h3>
           <a class="product__image" href="#">
-            <img src="img/product/buckwheat-mini-m.png" width="68" height="78"
-              alt="Изображение товара со вкусом гречки в маленькой упаковке из стаканчика сине-голубой расцветки">
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/product/buckwheat-mini-t.png">
+              <img src="img/product/buckwheat-mini-m.png" width="68" height="78"
+                alt="Изображение товара со вкусом гречки в маленькой упаковке из стаканчика сине-голубой расцветки">
+            </picture>
           </a>
           <table class="product__parameters">
             <tr>
@@ -191,9 +206,12 @@
               Cat Energy slim 1000 г
             </a>
           </h3>
-          <a class="product__image" href="#">
-            <img src="img/product/buckwheat-max-m.png" width="84" height="100"
-              alt="Изображение товара со вкусом гречки в большой упаковке из стаканчика сине-голубой расцветки">
+          <a class="product__image product__image--max" href="#">
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/product/buckwheat-max-t.png">
+              <img src="img/product/buckwheat-max-m.png" width="84" height="100"
+                alt="Изображение товара со вкусом гречки в большой упаковке из стаканчика сине-голубой расцветки">
+            </picture>
           </a>
           <table class="product__parameters">
             <tr>
@@ -218,8 +236,11 @@
             </a>
           </h3>
           <a class="product__image" href="#">
-            <img src="img/product/rice-mini-m.png" width="72" height="84"
-              alt="Изображение товара со вкусом риса в маленькой упаковке из стаканчика сиреневой расцветки">
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/product/rice-mini-t.png">
+              <img src="img/product/rice-mini-m.png" width="72" height="84"
+                alt="Изображение товара со вкусом риса в маленькой упаковке из стаканчика сиреневой расцветки">
+            </picture>
           </a>
           <table class="product__parameters">
             <tr>
@@ -291,7 +312,7 @@
 
     <!-- Адрес -->
 
-    <div class="contacts-background">
+    <!-- <div class="contacts-background">
       <section class="contacts container container--padding">
         <h2 class="visually-hidden">Контакты для дилеров</h2>
         <div class="contacts__wrapper">
@@ -302,18 +323,59 @@
 
         </div>
       </section>
-    </div>
+    </div> -->
 
     <!-- Карта -->
 
-    <section class="map">
+    <!-- <section class="map">
       <h2 class="visually-hidden">Адрес офиса на карте</h2>
       <div class="map__wrapper">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.4545883032742!2d30.31903146792114!3d59.93872411150009!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1629780325602!5m2!1sru!2sru"
+          width="1440" height="400" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
         <a class="map__image" target="_blank" href="https://yandex.ru/maps/-/CCQhQVUJwB">
-          <img src="img/map-mobile.png" width="320" height="362"
-            alt="Адрес офиса: ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+          <picture>
+            <source media="(min-width: 1280px)" srcset="img/map-desktop.png">
+            <source media="(min-width: 768px)" srcset="img/map-tablet.png">
+            <img src="img/map-mobile.png" width="320" height="362"
+              alt="Адрес офиса: ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+          </picture>
         </a>
       </div>
+    </section> -->
+
+    <section class="address">
+      <div class="address__contacts-background">
+        <div class="container address__contacts-container">
+          <section class="address__contacts">
+            <h2 class="visually-hidden">Контакты для дилеров</h2>
+            <div class="address__contacts-wrapper">
+              <b class="address__contacts-title">Приглашаем к сотрудничеству дилеров!</b>
+              <address class="address__contacts-address">
+                ул. Большая Конюшенная, д. 19/8 <span class="address__contacts-city">Санкт-Петербург</span>
+              </address>
+            </div>
+          </section>
+        </div>
+      </div>
+
+      <section class="address__map">
+        <h2 class="visually-hidden">Адрес офиса на карте</h2>
+        <div class="address__map-wrapper">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.4545883032742!2d30.31903146792114!3d59.93872411150009!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1629780325602!5m2!1sru!2sru"
+            width="1440" height="400" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
+          <a class="address__map-image" target="_blank" href="https://yandex.ru/maps/-/CCQhQVUJwB">
+            <picture>
+              <source media="(min-width: 1280px)" srcset="img/map-desktop.png">
+              <source media="(min-width: 768px)" srcset="img/map-tablet.png">
+              <img src="img/map-mobile.png" width="320" height="362"
+                alt="Адрес офиса: ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+            </picture>
+          </a>
+        </div>
+      </section>
+
     </section>
 
   </main>
