--- a/source/catalog.html
+++ b/source/catalog.html
@@ -50,10 +50,10 @@
   </header>
 
   <main class="page-main">
+<div class="container">
+    <h1 class="heading-primary heading-primary--catalog">Каталог продукции</h1>
 
-    <h1 class="heading-primary heading-primary--catalog container">Каталог продукции</h1>
-
-    <section class="catalog container">
+    <section class="catalog">
       <ul class="catalog__list">
         <li class="catalog__item product">
           <h3 class="product__title">
@@ -269,6 +269,8 @@
         </li>
       </ul>
     </section>
+
+  </div>
 
     <!-- Дополнительные товары -->
 
