--- a/source/form.html
+++ b/source/form.html
@@ -52,13 +52,13 @@
 
   <main class="page-main">
     <div class="container container--padding">
-      <h1 class="heading-primary">Подбор программы</h1>
+      <h1 class="heading-primary heading-primary--form">Подбор программы</h1>
 
       <form class="form" action="https://echo.htmlacademy.ru" method="get">
 
         <h3 class="form__title">Заполните анкету, и мы подберем программу&nbsp;питания для вашего кота</h3>
         <div class="form__field-col-1">
-          <fieldset class="form__field">
+          <fieldset class="form__field form__field-data-cat">
             <legend class="visually-hidden">Данные вашего кота</legend>
             <p class="form__input-wrapper">
               <label class="form__label" for="name-cat">Имя:*</label>
@@ -77,62 +77,68 @@
           <fieldset class="form__field form__field--border form__field-programm">
             <legend class="visually-hidden">Выбор программы питания</legend>
             <p class="form__radio-wrapper">
-              <input class="form__radio-input" id="skinny" type="radio" name="nutrition" value="thin-down" checked>
+              <input class="visually-hidden form__radio-input" id="skinny" type="radio" name="nutrition"
+                value="thin-down" checked>
               <label class="form__label form__radio-label" for="skinny">Похудение</label>
             </p>
             <p class="form__radio-wrapper">
-              <input class="form__radio-input" id="mass" type="radio" name="nutrition" value="weight-set">
+              <input class="visually-hidden form__radio-input" id="mass" type="radio" name="nutrition"
+                value="weight-set">
               <label class="form__label form__radio-label" for="mass">Набор массы</label>
             </p>
             <p class="form__radio-wrapper">
-              <input class="form__radio-input" id="un-known" type="radio" name="nutrition" value="unknown">
+              <input class="visually-hidden form__radio-input" id="un-known" type="radio" name="nutrition"
+                value="unknown" disabled>
               <label class="form__label form__radio-label" for="un-known">Не знаю (нужен ваш совет)</label>
             </p>
           </fieldset>
         </div>
 
         <fieldset class="form__field">
-          <legend class="form__field-legend">Контактные данные (владельца кота)</legend>
-          <div class="form__field-col-1">
-            <p class="form__input-wrapper">
+          <legend class="form__field-legend heading-secondary heading-secondary--col-1">Контактные данные (владельца
+            кота)</legend>
+          <div class="form__field-col-2">
+            <p class="form__input-wrapper form__input-wrapper--email">
               <label class="form__label" for="email-owner">
                 <nobr>E-mail</nobr>&nbsp;:*
               </label>
-              <input class="form__input form__input--owner" id="email-owner" type="email" name="email"
+              <input class="form__input form__input-email" id="email-owner" type="email" name="email"
                 placeholder="kuklachev@gmail.com" required>
             </p>
             <p class="form__input-wrapper">
               <label class="form__label" for="tel-owner">Телефон:*</label>
-              <input class="form__input form__input--owner" id="tel-owner" type="tel" name="tel"
+              <input class="form__input form__input-phone" id="tel-owner" type="tel" name="tel"
                 placeholder="8 (960) 900-60-90" required>
             </p>
           </div>
         </fieldset>
 
         <fieldset class="form__field">
-          <legend class="form__field-legend">Комментарий</legend>
+          <legend class="form__field-legend heading-secondary">Комментарий</legend>
           <label class="visually-hidden" for="about-cat">Напишите о повадках кота</label>
-          <textarea class="form__textarea" id="about-cat" name="comment" cols="40" rows="8"
+          <textarea class="form__textarea" id="about-cat" name="comment" cols="40" rows="7"
             placeholder="Расскажите обо всех повадках кота"></textarea>
         </fieldset>
 
-        <fieldset class="form__field">
-          <legend class="form__field-legend">Дополнительно</legend>
+        <fieldset class="form__field form__field--additional">
+          <legend class="form__field-legend form__field-legend--additional heading-secondary">Дополнительно</legend>
           <div class="form__field-wrapper-checkbox">
             <p class="form__checkbox-wrapper">
-              <input class="form__checkbox-input" id="sugar" type="checkbox" name="sugar-substitute" checked>
+              <input class="visually-hidden form__checkbox-input" id="sugar" type="checkbox" name="sugar-substitute"
+                checked disabled>
               <label class="form__label form__checkbox-label" for="sugar">Сахарозаменитель</label>
             </p>
             <p class="form__checkbox-wrapper">
-              <input class="form__checkbox-input" id="drink-water" type="checkbox" name="drinking-water">
+              <input class="visually-hidden form__checkbox-input" id="drink-water" type="checkbox"
+                name="drinking-water">
               <label class="form__label form__checkbox-label" for="drink-water">Питьевая вода</label>
             </p>
             <p class="form__checkbox-wrapper">
-              <input class="form__checkbox-input" id="milk-check" type="checkbox" name="milk">
+              <input class="visually-hidden form__checkbox-input" id="milk-check" type="checkbox" name="milk">
               <label class="form__label form__checkbox-label" for="milk-check">Молоко</label>
             </p>
             <p class="form__checkbox-wrapper">
-              <input class="form__checkbox-input" id="vitamin" type="checkbox" name="vitamins">
+              <input class="visually-hidden form__checkbox-input" id="vitamin" type="checkbox" name="vitamins">
               <label class="form__label form__checkbox-label" for="vitamin">Витамины</label>
             </p>
           </div>
