--- a/source/index.html
+++ b/source/index.html
@@ -197,6 +197,13 @@
           </div>
           <div class="result__toggles">
             <button class="result__toggle-before">Было</button>
+            <div class="result__switch-block">
+              <label class="result__switch" for="result-switch"
+                aria-label="Переключатель результатов программы питания">
+                <input class="result__switch-input" id="result-switch" type="checkbox">
+                <span class="result__switch-slider"></span>
+              </label>
+            </div>
             <label class="visually-hidden" for="range-result">Переключатель изображений котов по результатам
               использованной программы</label>
             <input class="result__range" type="range" min="0" max="100" value="50" step="1" name="result-range"
@@ -257,14 +264,14 @@
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.4545883032742!2d30.31903146792114!3d59.93872411150009!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1629780325602!5m2!1sru!2sru"
             width="1440" height="362" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
-            <a class="address__map-image" target="_blank" href="https://yandex.ru/maps/-/CCQhQVUJwB">
-              <picture>
-                <source media="(min-width: 1280px)" srcset="img/map-desktop.png">
-                <source media="(min-width: 768px)" srcset="img/map-tablet.png">
-                <img src="img/map-mobile.png" width="320" height="362"
-                  alt="Адрес офиса: ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
-              </picture>
-            </a>
+          <a class="address__map-image" target="_blank" href="https://yandex.ru/maps/-/CCQhQVUJwB">
+            <picture>
+              <source media="(min-width: 1280px)" srcset="img/map-desktop.png">
+              <source media="(min-width: 768px)" srcset="img/map-tablet.png">
+              <img src="img/map-mobile.png" width="320" height="362"
+                alt="Адрес офиса: ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+            </picture>
+          </a>
         </div>
       </section>
 
