--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -17,7 +21,11 @@
 
       <div class="page-header__logo">
         <a class="page-header__logo-icon" href="index.html">
+          <picture>
+            <source media="(min-width: 1280px)" srcset="img/svg/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/svg/logo-tablet.svg">
           <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
+        </picture>
         </a>
       </div>
 
@@ -63,8 +71,8 @@
           </h3>
           <a class="product__image" href="#">
             <picture>
-              <source media="(min-width: 768px)" srcset="img/product/chicken-mimi-t.png">
-              <img src="img/product/chicken-mimi-m.png" width="68" height="86"
+              <source media="(min-width: 768px)" srcset="img/product/chicken-mini-t.png 1x, img/product/chicken-mini-t@2x.png 2x">
+              <img src="img/product/chicken-mini-m.png" srcset="img/product/chicken-mini-m@2x.png 2x" width="84" height="98"
                 alt="Изображение товара со вкусом курицы в маленькой упаковке из стаканчика желто-оранжевой расцветки">
             </picture>
           </a>
@@ -92,8 +100,9 @@
           </h3>
           <a class="product__image product__image--max" href="#">
             <picture>
-              <source media="(min-width: 768px)" srcset="img/product/chicken-max-t.png">
-              <img src="img/product/chicken-max-m.png" width="84" height="101"
+              <source media="(min-width: 1280px)" srcset="img/product/chicken-max-d.png 1x, img/product/chicken-max-d@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/product/chicken-max-t.png 1x, img/product/chicken-max-t@2x.png 2x">
+              <img src="img/product/chicken-max-m.png" srcset="img/product/chicken-max-m@2x.png 2x" width="84" height="101"
                 alt="Изображение товара со вкусом курицы в большой упаковке из стаканчика желто-оранжевой расцветки">
             </picture>
           </a>
@@ -121,8 +130,8 @@
           </h3>
           <a class="product__image" href="#">
             <picture>
-              <source media="(min-width: 768px)" srcset="img/product/fish-mini-t.png">
-              <img src="img/product/fish-mini-m.png" width="68" height="78"
+              <source media="(min-width: 768px)" srcset="img/product/fish-mini-t.png 1x, img/product/fish-mini-t@2x.png 2x">
+              <img src="img/product/fish-mini-m.png" srcset="img/product/fish-mini-m@2x.png 2x" width="84" height="85"
                 alt="Изображение товара со вкусом рыбы в маленькой упаковке из стаканчика зелёной расцветки">
             </picture>
           </a>
@@ -150,8 +159,9 @@
           </h3>
           <a class="product__image product__image--max" href="#">
             <picture>
-              <source media="(min-width: 768px)" srcset="img/product/fish-max-t.png">
-              <img src="img/product/fish-max-m.png" width="84" height="101"
+              <source media="(min-width: 1280px)" srcset="img/product/fish-max-d.png 1x, img/product/fish-max-d@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/product/fish-max-t.png 1x, img/product/fish-max-t@2x.png 2x">
+              <img src="img/product/fish-max-m.png" srcset="img/product/fish-max-m@2x.png 2x" width="84" height="101"
                 alt="Изображение товара со вкусом рыбы в большой упаковке из стаканчика зелёной расцветки">
             </picture>
           </a>
@@ -179,8 +189,8 @@
           </h3>
           <a class="product__image" href="#">
             <picture>
-              <source media="(min-width: 768px)" srcset="img/product/buckwheat-mini-t.png">
-              <img src="img/product/buckwheat-mini-m.png" width="68" height="78"
+              <source media="(min-width: 768px)" srcset="img/product/buckwheat-mini-t.png 1x, img/product/buckwheat-mini-t@2x.png 2x">
+              <img src="img/product/buckwheat-mini-m.png" srcset="img/product/buckwheat-mini-m@2x.png 2x" width="84" height="82"
                 alt="Изображение товара со вкусом гречки в маленькой упаковке из стаканчика сине-голубой расцветки">
             </picture>
           </a>
@@ -208,8 +218,9 @@
           </h3>
           <a class="product__image product__image--max" href="#">
             <picture>
-              <source media="(min-width: 768px)" srcset="img/product/buckwheat-max-t.png">
-              <img src="img/product/buckwheat-max-m.png" width="84" height="100"
+              <source media="(min-width: 1280px)" srcset="img/product/buckwheat-max-d.png 1x, img/product/buckwheat-max-d@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/product/buckwheat-max-t.png 1x, img/product/buckwheat-max-t@2x.png 2x">
+              <img src="img/product/buckwheat-max-m.png" srcset="img/product/buckwheat-max-m@2x.png 2x" width="84" height="100"
                 alt="Изображение товара со вкусом гречки в большой упаковке из стаканчика сине-голубой расцветки">
             </picture>
           </a>
@@ -237,8 +248,8 @@
           </h3>
           <a class="product__image" href="#">
             <picture>
-              <source media="(min-width: 768px)" srcset="img/product/rice-mini-t.png">
-              <img src="img/product/rice-mini-m.png" width="72" height="84"
+              <source media="(min-width: 768px)" srcset="img/product/rice-mini-t.png 1x, img/product/rice-mini-t@2x.png 2x">
+              <img src="img/product/rice-mini-m.png" srcset="img/product/rice-mini-m@2x.png 2x" width="84" height="88"
                 alt="Изображение товара со вкусом риса в маленькой упаковке из стаканчика сиреневой расцветки">
             </picture>
           </a>
@@ -352,7 +363,7 @@
           <section class="address__contacts">
             <h2 class="visually-hidden">Контакты для дилеров</h2>
             <div class="address__contacts-wrapper">
-              <b class="address__contacts-title">Приглашаем к сотрудничеству дилеров!</b>
+              <b class="address__contacts-title">Приглашаем к&nbsp;сотрудничеству дилеров!</b>
               <address class="address__contacts-address">
                 ул. Большая Конюшенная, д. 19/8 <span class="address__contacts-city">Санкт-Петербург</span>
               </address>
@@ -366,12 +377,12 @@
         <div class="address__map-wrapper">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.4545883032742!2d30.31903146792114!3d59.93872411150009!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1629780325602!5m2!1sru!2sru"
-            width="1440" height="400" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
+            width="1440" height="362" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
           <a class="address__map-image" target="_blank" href="https://yandex.ru/maps/-/CCQhQVUJwB">
             <picture>
-              <source media="(min-width: 1280px)" srcset="img/map-desktop.png">
-              <source media="(min-width: 768px)" srcset="img/map-tablet.png">
-              <img src="img/map-mobile.png" width="320" height="362"
+              <source media="(min-width: 1280px)" srcset="img/map-desktop.png 1x, img/map-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/map-tablet.png 1x, img/map-tablet@2x.png 2x">
+              <img src="img/map-mobile.png" srcset="img/map-mobile@2x.png 2x" width="320" height="362"
                 alt="Адрес офиса: ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
             </picture>
           </a>
