--- a/source/form.html
+++ b/source/form.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -18,7 +21,11 @@
 
       <div class="page-header__logo">
         <a class="page-header__logo-icon" href="index.html">
-          <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
+          <picture>
+            <source media="(min-width: 1280px)" srcset="img/svg/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/svg/logo-tablet.svg">
+            <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
+          </picture>
         </a>
       </div>
 
@@ -66,7 +73,8 @@
             </p>
             <p class="form__input-wrapper">
               <label class="form__label" for="weight-cat">Вес&nbsp;(кг):*</label>
-              <input class="form__input" id="weight-cat" type="number" name="weight" placeholder="7" required>
+              <input class="form__input form__input--weight" id="weight-cat" type="number" name="weight" placeholder="7"
+                required>
             </p>
             <p class="form__input-wrapper">
               <label class="form__label" for="age-cat">Возраст&nbsp;(лет):</label>
@@ -94,29 +102,54 @@
           </fieldset>
         </div>
 
-        <fieldset class="form__field">
+        <fieldset class="form__field form__field--contact">
           <legend class="form__field-legend heading-secondary heading-secondary--col-1">Контактные данные (владельца
             кота)</legend>
           <div class="form__field-col-2">
             <p class="form__input-wrapper form__input-wrapper--email">
               <label class="form__label" for="email-owner">
-                <nobr>E-mail</nobr>&nbsp;:*
+                <nobr>E-mail</nobr>:*
               </label>
-              <input class="form__input form__input-email" id="email-owner" type="email" name="email"
-                placeholder="kuklachev@gmail.com" required>
+              <input class="form__input form__input--contact form__input-email form__input-required" id="email-owner"
+                type="email" name="email" placeholder="kuklachev@gmail.com" required>
+              <svg class="form__input-icon-email" width="19" height="14" viewBox="0 0 19 14" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <line x1="0.65" y1="6" x2="0.65" y2="14" stroke="#222222" stroke-width="1.3" />
+                <line x1="17.65" y1="6" x2="17.65" y2="14" stroke="#222222" stroke-width="1.3" />
+                <line y1="13.35" x2="18" y2="13.35" stroke="#222222" stroke-width="1.3" />
+                <line y1="1.35" x2="18" y2="1.35" stroke="#222222" stroke-width="1.3" />
+                <path d="M17.35 3.1821L9.00002 9.67654L0.65 3.18209V1.65H3.5L9.00002 1.65H14H17.35V3.1821Z"
+                  stroke="#222222" stroke-width="1.3" />
+              </svg>
             </p>
             <p class="form__input-wrapper">
-              <label class="form__label" for="tel-owner">Телефон:*</label>
-              <input class="form__input form__input-phone" id="tel-owner" type="tel" name="tel"
+              <label class="form__label form__label--phone" for="tel-owner">Телефон:*</label>
+              <input class="form__input form__input--contact form__input-phone" id="tel-owner" type="tel" name="tel"
                 placeholder="8 (960) 900-60-90" required>
+              <svg class="form__input-icon-phone" width="20" height="20" viewBox="0 0 20 20" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0)">
+                  <path
+                    d="M17.9 9.4H9.40002V10.6H17.9L15.8 12.7L16.7 13.6L19.8 10.5C19.8974 10.3702 19.95 10.2123 19.95 10.05C19.95 9.88772 19.8974 9.72982 19.8 9.6L16.7 6.5L15.8 7.4L17.9 9.4Z"
+                    fill="black" />
+                  <path
+                    d="M8.09995 19.4V13.2C8.0884 13.0447 8.02148 12.8987 7.91136 12.7886C7.80125 12.6785 7.65525 12.6116 7.49995 12.6H3.09995C3.1051 12.9167 3.23318 13.2189 3.45712 13.4428C3.68106 13.6668 3.9833 13.7949 4.29995 13.8H6.79995V18.8H3.09995C2.86319 18.8149 2.62585 18.7825 2.4017 18.7048C2.17756 18.6271 1.97109 18.5057 1.7943 18.3475C1.61751 18.1893 1.47393 17.9976 1.37189 17.7834C1.26986 17.5693 1.21142 17.337 1.19995 17.1V3.10001C1.19175 2.6373 1.3651 2.18977 1.68286 1.85331C2.00062 1.51686 2.43752 1.31824 2.89995 1.30001H6.79995V6.30001H4.39995C4.0833 6.30516 3.78106 6.43324 3.55712 6.65718C3.33318 6.88112 3.2051 7.18336 3.19995 7.50001H7.59995C7.75525 7.48846 7.90125 7.42154 8.01136 7.31142C8.12148 7.2013 8.1884 7.05531 8.19995 6.90001V0.600012C8.15226 0.443872 8.06111 0.304534 7.93715 0.198285C7.81319 0.0920352 7.66155 0.0232649 7.49995 1.23734e-05H3.09995C2.70593 -0.0133408 2.31315 0.0511002 1.94405 0.189651C1.57495 0.328202 1.23678 0.538145 0.948872 0.807477C0.660965 1.07681 0.428969 1.40025 0.266146 1.7593C0.103324 2.11835 0.0128689 2.50598 -4.64045e-05 2.90001V16.8C-0.0290254 17.1977 0.0245894 17.597 0.157426 17.9729C0.290263 18.3489 0.499448 18.6932 0.771825 18.9844C1.0442 19.2756 1.37388 19.5072 1.74012 19.6648C2.10637 19.8224 2.50126 19.9024 2.89995 19.9H7.49995C7.57344 19.915 7.64937 19.9133 7.7221 19.895C7.79484 19.8767 7.86253 19.8423 7.92015 19.7942C7.97777 19.7462 8.02385 19.6859 8.05497 19.6176C8.0861 19.5494 8.10147 19.475 8.09995 19.4Z"
+                    fill="black" />
+                </g>
+                <defs>
+                  <clipPath id="clip0">
+                    <rect width="20" height="20" fill="white" />
+                  </clipPath>
+                </defs>
+              </svg>
             </p>
           </div>
         </fieldset>
 
-        <fieldset class="form__field">
-          <legend class="form__field-legend heading-secondary">Комментарий</legend>
+        <fieldset class="form__field form__field--comment">
+          <legend class="form__field-legend form__field-legend--comment heading-secondary">Комментарий</legend>
           <label class="visually-hidden" for="about-cat">Напишите о повадках кота</label>
-          <textarea class="form__textarea" id="about-cat" name="comment" cols="40" rows="7"
+          <textarea class="form__textarea" id="about-cat" name="comment" cols="41" rows="7"
             placeholder="Расскажите обо всех повадках кота"></textarea>
         </fieldset>
 
@@ -195,7 +228,7 @@
           <section class="address__contacts">
             <h2 class="visually-hidden">Контакты для дилеров</h2>
             <div class="address__contacts-wrapper">
-              <b class="address__contacts-title">Приглашаем к сотрудничеству дилеров!</b>
+              <b class="address__contacts-title">Приглашаем к&nbsp;сотрудничеству дилеров!</b>
               <address class="address__contacts-address">
                 ул. Большая Конюшенная, д. 19/8 <span class="address__contacts-city">Санкт-Петербург</span>
               </address>
@@ -209,12 +242,12 @@
         <div class="address__map-wrapper">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.4545883032742!2d30.31903146792114!3d59.93872411150009!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1629780325602!5m2!1sru!2sru"
-            width="1440" height="400" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
+            width="1440" height="362" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
           <a class="address__map-image" target="_blank" href="https://yandex.ru/maps/-/CCQhQVUJwB">
             <picture>
-              <source media="(min-width: 1280px)" srcset="img/map-desktop.png">
-              <source media="(min-width: 768px)" srcset="img/map-tablet.png">
-              <img src="img/map-mobile.png" width="320" height="362"
+              <source media="(min-width: 1280px)" srcset="img/map-desktop.png 1x, img/map-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/map-tablet.png 1x, img/map-tablet@2x.png 2x">
+              <img src="img/map-mobile.png" srcset="img/map-mobile@2x.png 2x" width="320" height="362"
                 alt="Адрес офиса: ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
             </picture>
           </a>
