Исправления позиционирования в карточках товаров

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -160,7 +160,7 @@
           <a class="product__image product__image--max" href="#">
             <picture>
               <source media="(min-width: 1280px)" srcset="img/product/fish-max-d.png 1x, img/product/fish-max-d@2x.png 2x">
-              <source media="(min-width: 768px)" srcset="img/product/fish-max-t.png 1x, img/product/fish-max-t@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/product/catalog-4-t.png 1x, img/product/catalog-4-t@2x.png 2x">
               <img src="img/product/fish-max-m.png" srcset="img/product/fish-max-m@2x.png 2x" width="84" height="101"
                 alt="Изображение товара со вкусом рыбы в большой упаковке из стаканчика зелёной расцветки">
             </picture>
