Правки картинок в карточках товаров

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,8 +24,8 @@
           <picture>
             <source media="(min-width: 1280px)" srcset="img/svg/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/svg/logo-tablet.svg">
-          <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
-        </picture>
+            <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
+          </picture>
         </a>
       </div>
 
@@ -58,230 +58,244 @@
   </header>
 
   <main class="page-main">
-<div class="container">
-    <h1 class="heading-primary heading-primary--catalog">Каталог продукции</h1>
+    <div class="container">
+      <h1 class="heading-primary heading-primary--catalog">Каталог продукции</h1>
 
-    <section class="catalog">
-      <ul class="catalog__list">
-        <li class="catalog__item product">
-          <h3 class="product__title">
-            <a class="product__title-link" href="#">
-              Cat Energy pro 500 г
+      <section class="catalog">
+        <ul class="catalog__list">
+          <li class="catalog__item product">
+            <h3 class="product__title">
+              <a class="product__title-link" href="#">
+                Cat Energy pro 500 г
+              </a>
+            </h3>
+            <a class="product__image" href="#">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/product/chicken-mini-t.png 1x, img/product/chicken-mini-t@2x.png 2x">
+                <img src="img/product/chicken-mini-m.png" srcset="img/product/chicken-mini-m@2x.png 2x" width="84"
+                  height="98"
+                  alt="Изображение товара со вкусом курицы в маленькой упаковке из стаканчика желто-оранжевой расцветки">
+              </picture>
             </a>
-          </h3>
-          <a class="product__image" href="#">
-            <picture>
-              <source media="(min-width: 768px)" srcset="img/product/chicken-mini-t.png 1x, img/product/chicken-mini-t@2x.png 2x">
-              <img src="img/product/chicken-mini-m.png" srcset="img/product/chicken-mini-m@2x.png 2x" width="84" height="98"
-                alt="Изображение товара со вкусом курицы в маленькой упаковке из стаканчика желто-оранжевой расцветки">
-            </picture>
-          </a>
-          <table class="product__parameters">
-            <tr>
-              <td>Масса</td>
-              <td>500 г</td>
-            </tr>
-            <tr>
-              <td>Вкус</td>
-              <td>Курица</td>
-            </tr>
-            <tr>
-              <td>Цена</td>
-              <td>700 Р.</td>
-            </tr>
-          </table>
-          <a class="product__button button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item product">
-          <h3 class="product__title">
-            <a class="product__title-link" href="#">
-              Cat Energy pro 1000 г
+            <table class="product__parameters">
+              <tr>
+                <td>Масса</td>
+                <td>500 г</td>
+              </tr>
+              <tr>
+                <td>Вкус</td>
+                <td>Курица</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>700 Р.</td>
+              </tr>
+            </table>
+            <a class="product__button button" href="#">Заказать</a>
+          </li>
+          <li class="catalog__item product">
+            <h3 class="product__title">
+              <a class="product__title-link" href="#">
+                Cat Energy pro 1000 г
+              </a>
+            </h3>
+            <a class="product__image product__image--max" href="#">
+              <picture>
+                <source media="(min-width: 1280px)"
+                  srcset="img/product/chicken-max-d.png 1x, img/product/chicken-max-d@2x.png 2x">
+                <source media="(min-width: 768px)"
+                  srcset="img/product/chicken-max-t.png 1x, img/product/chicken-max-t@2x.png 2x">
+                <img src="img/product/chicken-max-m.png" srcset="img/product/chicken-max-m@2x.png 2x" width="84"
+                  height="101"
+                  alt="Изображение товара со вкусом курицы в большой упаковке из стаканчика желто-оранжевой расцветки">
+              </picture>
             </a>
-          </h3>
-          <a class="product__image product__image--max" href="#">
-            <picture>
-              <source media="(min-width: 1280px)" srcset="img/product/chicken-max-d.png 1x, img/product/chicken-max-d@2x.png 2x">
-              <source media="(min-width: 768px)" srcset="img/product/chicken-max-t.png 1x, img/product/chicken-max-t@2x.png 2x">
-              <img src="img/product/chicken-max-m.png" srcset="img/product/chicken-max-m@2x.png 2x" width="84" height="101"
-                alt="Изображение товара со вкусом курицы в большой упаковке из стаканчика желто-оранжевой расцветки">
-            </picture>
-          </a>
-          <table class="product__parameters">
-            <tr>
-              <td>Масса</td>
-              <td>1000 г</td>
-            </tr>
-            <tr>
-              <td>Вкус</td>
-              <td>Курица</td>
-            </tr>
-            <tr>
-              <td>Цена</td>
-              <td>1000 Р.</td>
-            </tr>
-          </table>
-          <a class="product__button button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item product">
-          <h3 class="product__title">
-            <a class="product__title-link" href="#">
-              Cat Energy pro 500 г
+            <table class="product__parameters">
+              <tr>
+                <td>Масса</td>
+                <td>1000 г</td>
+              </tr>
+              <tr>
+                <td>Вкус</td>
+                <td>Курица</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>1000 Р.</td>
+              </tr>
+            </table>
+            <a class="product__button button" href="#">Заказать</a>
+          </li>
+          <li class="catalog__item product">
+            <h3 class="product__title">
+              <a class="product__title-link" href="#">
+                Cat Energy pro 500 г
+              </a>
+            </h3>
+            <a class="product__image" href="#">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/product/fish-mini-t.png 1x, img/product/fish-mini-t@2x.png 2x">
+                <img src="img/product/fish-mini-m.png" srcset="img/product/fish-mini-m@2x.png 2x" width="84" height="85"
+                  alt="Изображение товара со вкусом рыбы в маленькой упаковке из стаканчика зелёной расцветки">
+              </picture>
             </a>
-          </h3>
-          <a class="product__image" href="#">
-            <picture>
-              <source media="(min-width: 768px)" srcset="img/product/fish-mini-t.png 1x, img/product/fish-mini-t@2x.png 2x">
-              <img src="img/product/fish-mini-m.png" srcset="img/product/fish-mini-m@2x.png 2x" width="84" height="85"
-                alt="Изображение товара со вкусом рыбы в маленькой упаковке из стаканчика зелёной расцветки">
-            </picture>
-          </a>
-          <table class="product__parameters">
-            <tr>
-              <td>Масса</td>
-              <td>500 г</td>
-            </tr>
-            <tr>
-              <td>Вкус</td>
-              <td>Рыба</td>
-            </tr>
-            <tr>
-              <td>Цена</td>
-              <td>700 Р.</td>
-            </tr>
-          </table>
-          <a class="product__button button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item product">
-          <h3 class="product__title">
-            <a class="product__title-link" href="#">
-              Cat Energy pro 1000 г
+            <table class="product__parameters">
+              <tr>
+                <td>Масса</td>
+                <td>500 г</td>
+              </tr>
+              <tr>
+                <td>Вкус</td>
+                <td>Рыба</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>700 Р.</td>
+              </tr>
+            </table>
+            <a class="product__button button" href="#">Заказать</a>
+          </li>
+          <li class="catalog__item product">
+            <h3 class="product__title">
+              <a class="product__title-link" href="#">
+                Cat Energy pro 1000 г
+              </a>
+            </h3>
+            <a class="product__image product__image--max" href="#">
+              <picture>
+                <source media="(min-width: 1280px)"
+                  srcset="img/product/fish-max-d.png 1x, img/product/fish-max-d@2x.png 2x">
+                <source media="(min-width: 768px)"
+                  srcset="img/product/fish-max-t.png 1x, img/product/fish-max-t@2x.png 2x">
+                <img src="img/product/fish-max-m.png" srcset="img/product/fish-max-m@2x.png 2x" width="84" height="101"
+                  alt="Изображение товара со вкусом рыбы в большой упаковке из стаканчика зелёной расцветки">
+              </picture>
             </a>
-          </h3>
-          <a class="product__image product__image--max" href="#">
-            <picture>
-              <source media="(min-width: 1280px)" srcset="img/product/fish-max-d.png 1x, img/product/fish-max-d@2x.png 2x">
-              <source media="(min-width: 768px)" srcset="img/product/catalog-4-t.png 1x, img/product/catalog-4-t@2x.png 2x">
-              <img src="img/product/fish-max-m.png" srcset="img/product/fish-max-m@2x.png 2x" width="84" height="101"
-                alt="Изображение товара со вкусом рыбы в большой упаковке из стаканчика зелёной расцветки">
-            </picture>
-          </a>
-          <table class="product__parameters">
-            <tr>
-              <td>Масса</td>
-              <td>1000 г</td>
-            </tr>
-            <tr>
-              <td>Вкус</td>
-              <td>Рыба</td>
-            </tr>
-            <tr>
-              <td>Цена</td>
-              <td>1000 Р.</td>
-            </tr>
-          </table>
-          <a class="product__button button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item product">
-          <h3 class="product__title">
-            <a class="product__title-link" href="#">
-              Cat Energy slim 500 г
+            <table class="product__parameters">
+              <tr>
+                <td>Масса</td>
+                <td>1000 г</td>
+              </tr>
+              <tr>
+                <td>Вкус</td>
+                <td>Рыба</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>1000 Р.</td>
+              </tr>
+            </table>
+            <a class="product__button button" href="#">Заказать</a>
+          </li>
+          <li class="catalog__item product">
+            <h3 class="product__title">
+              <a class="product__title-link" href="#">
+                Cat Energy slim 500 г
+              </a>
+            </h3>
+            <a class="product__image" href="#">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/product/buckwheat-mini-t.png 1x, img/product/buckwheat-mini-t@2x.png 2x">
+                <img src="img/product/buckwheat-mini-m.png" srcset="img/product/buckwheat-mini-m@2x.png 2x" width="84"
+                  height="82"
+                  alt="Изображение товара со вкусом гречки в маленькой упаковке из стаканчика сине-голубой расцветки">
+              </picture>
             </a>
-          </h3>
-          <a class="product__image" href="#">
-            <picture>
-              <source media="(min-width: 768px)" srcset="img/product/buckwheat-mini-t.png 1x, img/product/buckwheat-mini-t@2x.png 2x">
-              <img src="img/product/buckwheat-mini-m.png" srcset="img/product/buckwheat-mini-m@2x.png 2x" width="84" height="82"
-                alt="Изображение товара со вкусом гречки в маленькой упаковке из стаканчика сине-голубой расцветки">
-            </picture>
-          </a>
-          <table class="product__parameters">
-            <tr>
-              <td>Масса</td>
-              <td>500 г</td>
-            </tr>
-            <tr>
-              <td>Вкус</td>
-              <td>Гречка</td>
-            </tr>
-            <tr>
-              <td>Цена</td>
-              <td>400 Р.</td>
-            </tr>
-          </table>
-          <a class="product__button button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item product">
-          <h3 class="product__title">
-            <a class="product__title-link" href="#">
-              Cat Energy slim 1000 г
+            <table class="product__parameters">
+              <tr>
+                <td>Масса</td>
+                <td>500 г</td>
+              </tr>
+              <tr>
+                <td>Вкус</td>
+                <td>Гречка</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>400 Р.</td>
+              </tr>
+            </table>
+            <a class="product__button button" href="#">Заказать</a>
+          </li>
+          <li class="catalog__item product">
+            <h3 class="product__title">
+              <a class="product__title-link" href="#">
+                Cat Energy slim 1000 г
+              </a>
+            </h3>
+            <a class="product__image product__image--max" href="#">
+              <picture>
+                <source media="(min-width: 1280px)"
+                  srcset="img/product/buckwheat-max-d.png 1x, img/product/buckwheat-max-d@2x.png 2x">
+                <source media="(min-width: 768px)"
+                  srcset="img/product/buckwheat-max-t.png 1x, img/product/buckwheat-max-t@2x.png 2x">
+                <img src="img/product/buckwheat-max-m.png" srcset="img/product/buckwheat-max-m@2x.png 2x" width="84"
+                  height="100"
+                  alt="Изображение товара со вкусом гречки в большой упаковке из стаканчика сине-голубой расцветки">
+              </picture>
             </a>
-          </h3>
-          <a class="product__image product__image--max" href="#">
-            <picture>
-              <source media="(min-width: 1280px)" srcset="img/product/buckwheat-max-d.png 1x, img/product/buckwheat-max-d@2x.png 2x">
-              <source media="(min-width: 768px)" srcset="img/product/buckwheat-max-t.png 1x, img/product/buckwheat-max-t@2x.png 2x">
-              <img src="img/product/buckwheat-max-m.png" srcset="img/product/buckwheat-max-m@2x.png 2x" width="84" height="100"
-                alt="Изображение товара со вкусом гречки в большой упаковке из стаканчика сине-голубой расцветки">
-            </picture>
-          </a>
-          <table class="product__parameters">
-            <tr>
-              <td>Масса</td>
-              <td>1000 г</td>
-            </tr>
-            <tr>
-              <td>Вкус</td>
-              <td>Гречка</td>
-            </tr>
-            <tr>
-              <td>Цена</td>
-              <td>700 Р.</td>
-            </tr>
-          </table>
-          <a class="product__button button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item product">
-          <h3 class="product__title">
-            <a class="product__title-link" href="#">
-              Cat Energy slim 500 г
+            <table class="product__parameters">
+              <tr>
+                <td>Масса</td>
+                <td>1000 г</td>
+              </tr>
+              <tr>
+                <td>Вкус</td>
+                <td>Гречка</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>700 Р.</td>
+              </tr>
+            </table>
+            <a class="product__button button" href="#">Заказать</a>
+          </li>
+          <li class="catalog__item product">
+            <h3 class="product__title">
+              <a class="product__title-link" href="#">
+                Cat Energy slim 500 г
+              </a>
+            </h3>
+            <a class="product__image" href="#">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/product/rice-mini-t.png 1x, img/product/rice-mini-t@2x.png 2x">
+                <img src="img/product/rice-mini-m.png" srcset="img/product/rice-mini-m@2x.png 2x" width="84" height="88"
+                  alt="Изображение товара со вкусом риса в маленькой упаковке из стаканчика сиреневой расцветки">
+              </picture>
             </a>
-          </h3>
-          <a class="product__image" href="#">
-            <picture>
-              <source media="(min-width: 768px)" srcset="img/product/rice-mini-t.png 1x, img/product/rice-mini-t@2x.png 2x">
-              <img src="img/product/rice-mini-m.png" srcset="img/product/rice-mini-m@2x.png 2x" width="84" height="88"
-                alt="Изображение товара со вкусом риса в маленькой упаковке из стаканчика сиреневой расцветки">
-            </picture>
-          </a>
-          <table class="product__parameters">
-            <tr>
-              <td>Масса</td>
-              <td>500 г</td>
-            </tr>
-            <tr>
-              <td>Вкус</td>
-              <td>Рис</td>
-            </tr>
-            <tr>
-              <td>Цена</td>
-              <td>500 Р.</td>
-            </tr>
-          </table>
-          <a class="product__button button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item product product--all">
-          <h3 class="product__title-all">
-            <a class="product__title-link" href="#">
-              Показать еще 100500 товаров
-            </a>
-          </h3>
-          <p class="product__parameters product__parameters--all">На самом деле вкусов гораздо больше!</p>
-          <a class="button product__button product__button--all" href="#">Показать все</a>
-        </li>
-      </ul>
-    </section>
+            <table class="product__parameters">
+              <tr>
+                <td>Масса</td>
+                <td>500 г</td>
+              </tr>
+              <tr>
+                <td>Вкус</td>
+                <td>Рис</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>500 Р.</td>
+              </tr>
+            </table>
+            <a class="product__button button" href="#">Заказать</a>
+          </li>
+          <li class="catalog__item product product--all">
+            <h3 class="product__title-all">
+              <a class="product__title-link" href="#">
+                Показать еще 100500 товаров
+              </a>
+            </h3>
+            <p class="product__parameters product__parameters--all">На самом деле вкусов гораздо больше!</p>
+            <a class="button product__button product__button--all" href="#">Показать все</a>
+          </li>
+        </ul>
+      </section>
 
-  </div>
+    </div>
 
     <!-- Дополнительные товары -->
 
