--- a/source/index.html
+++ b/source/index.html
@@ -12,6 +12,12 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
+<svg style="display: none;">
+  <symbol id="logo-academy" viewBox="0 0 27 34" fill="none">
+    <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
+  </symbol>
+</svg>
+
 <body class="page__body">
   <header class="page-header">
 
@@ -24,8 +30,8 @@
           <picture>
             <source media="(min-width: 1280px)" srcset="img/svg/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/svg/logo-tablet.svg">
-          <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
-        </picture>
+            <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
+          </picture>
         </a>
       </div>
 
@@ -80,8 +86,8 @@
           <picture>
             <source media="(min-width: 1280px)" srcset="img/promo-desktop.png 1x, img/promo-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/promo-tablet.jpg 1x, img/promo-tablet@2x.jpg 2x">
-            <img class="promo__image" src="img/promo-mobile.png" srcset="img/promo-mobile@2x.png 2x" width="280" height="270"
-              alt="Изображение товара со вкусом курицы в упаковке из стаканчика желто-оранжевой расцветки">
+            <img class="promo__image" src="img/promo-mobile.png" srcset="img/promo-mobile@2x.png 2x" width="280"
+              height="270" alt="Изображение товара со вкусом курицы в упаковке из стаканчика желто-оранжевой расцветки">
           </picture>
         </div>
       </div>
@@ -189,7 +195,8 @@
             <div class="result__image-before result__image-wrapper">
               <picture>
                 <source media="(min-width: 768px)" srcset="img/cat-fat-full.png 1x, img/cat-fat-full@2x.png 2x">
-                <img src="img/cat-before-m.png" srcset="img/cat-before-m@2x.png 2x" width="311" height="232" alt="Изображение упитанного кота">
+                <img src="img/cat-before-m.png" srcset="img/cat-before-m@2x.png 2x" width="311" height="232"
+                  alt="Изображение упитанного кота">
               </picture>
             </div>
 
@@ -197,7 +204,8 @@
               <div class="result__image-wrapper-after">
                 <picture>
                   <source media="(min-width: 768px)" srcset="img/cat-skinny-full.png 1x, img/cat-skinny-full@2x.png 2x">
-                  <img src="img/cat-after-m.png" srcset="img/cat-after-m@2x.png 2x" width="251" height="240" alt="Изображение худого кота">
+                  <img src="img/cat-after-m.png" srcset="img/cat-after-m@2x.png 2x" width="251" height="240"
+                    alt="Изображение худого кота">
                 </picture>
               </div>
             </div>
@@ -334,9 +342,19 @@
 
       <div class="page-footer__col-3 copyright">
         <h3 class="visually-hidden">Разработчик сайта</h3>
-        <a class="copyright__name" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <a class="copyright__name" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+        </a>
         <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
-          <img src="img/svg/html-academy-logo.svg" width="27" height="34" alt="Логотип HTML Academy">
+          <!-- <img src="img/svg/html-academy-logo.svg" width="27" height="34" alt="Логотип HTML Academy"> -->
+          <svg class="copyright__logo-icon" width="28" height="34">
+            <use xlink:href="#logo-academy"></use>
+          </svg>
+          <!-- <svg class="copyright__logo-icon" id="logo-academy" xmlns="http://www.w3.org/2000/svg" width="28" height="34"
+            viewBox="0 0 27 34" fill="none">
+            <path
+              d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z"
+              fill="#666666" />
+          </svg> -->
         </a>
       </div>
 
