--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/180.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <svg style="display: none;">
@@ -362,8 +362,8 @@
 
     </div>
   </footer>
-  <script src="js/main-nav.js"></script>
-  <script src="js/result-slider.js"></script>
+  <script src="js/main-nav.min.js"></script>
+  <script src="js/result-slider.min.js"></script>
 </body>
 
 </html>
